# Game-Dev-Test

./: .gitignore  CMakeLists.txt  build.bat
assets/shaders/: basic.frag  basic.vert
include/hs/rendering/: EBO.h  VAO.h  VBO.h
src/: main.cpp
